# osm_bridge_ros_wrapper

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
action/: GridMapGenerator.action  OSMQuery.action  PathPlanner.action  WMQuery.action
launch/: osm_bridge.launch
msg/: Member.msg
msg/osm/: Member.msg  Node.msg  Way.msg
msg/planner/: PlannerArea.msg
msg/wm/: Area.msg  Building.msg  Connection.msg  Corridor.msg  Door.msg  Feature.msg  Floor.msg  LocalArea.msg  Room.msg  Shape.msg  Stairs.msg  Wall.msg
ros/action/: NearestWLAN.action  PathPlanner.action  SemanticFeatures.action  WMQuery.action
ros/config/: AMK.yaml  BRSU.yaml  Logimat.yaml
ros/launch/: osm_bridge.launch
ros/msg/osm/: Relation.msg
ros/msg/planner/: PlannerArea.msg
ros/msg/wm/: Area.msg  Corridor.msg  Elevator.msg  LocalArea.msg  Pillar.msg  Point.msg  Side.msg
ros/scripts/: osm_bridge_ros.py
ros/src/osm_bridge_ros_wrapper/: obl_wm_to_ros_adapter.py  semantic_features_callback.py  wm_query_callback.py
ros/tests/: gridmap_generator_client.py  nearest_wlan_finder_client.py  path_planner_client.py  semantic_features_finder_client.py
scripts/: obl_osm_to_ros_adapter.py  obl_wm_to_ros_adapter.py  osm_bridge.py  osm_bridge_ros.py  osm_query_callback.py  wm_query_callback.py
tests/: gridmap_generator_client.py  osm_client.py  osm_query_client.py  path_planner_client.py  wm_query_client.py
