<?xml version="1.0"?>
<package format="2">
  <name>osm_bridge_ros_wrapper</name>
  <version>0.0.0</version>
  <description>The ROS wrapper for OSM Bridge Library (OBL)</description>

  <maintainer email="lakshadeep.naik@gmail.com">Lakshadeep Naik</maintainer>

  <license>GPLv3</license>

  <author email="lakshadeep.naik@gmail.com">Lakshadeep Naik</author>
  <author email="dharmingeo@gmail.com">Dharmin B.</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>

</package>
